# freya

./: .env  .pre-commit-config.yaml  config.py  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
app/db/: base.py
app/db/models/: user.py
app/graphql/: schema.py  types.py
app/graphql/mutations/: authentication.py  user.py
app/graphql/queries/: hello_world.py
app/repositories/: user.py
app/services/: authentication.py
